迁移服务端工作流引擎 / port server workflow engine
将工作流状态、事件、槽位、持久化和超时服务迁到 Forge 1.12.2 的整数维度、EntityPlayerMP 与旧 NBT/文本 API，保留恢复和 nextId 语义。

Port workflow state, events, slots, persistence, and timeout services to Forge 1.12.2 integer dimensions, EntityPlayerMP, and legacy NBT/text APIs while preserving recovery and nextId semantics.